# Server-Client-Application

./: CMakeLists.txt  File_System.cpp  File_System.h  HTTP_Handler.cpp  HTTP_Handler.h  HTTP_Server.cpp  HTTP_Server.h  Request_Parser.cpp  Request_Parser.h  Request_Parser.hpp  Response_Builder.cpp  Response_Builder.h  client.cpp  fakes.txt  habalo.txt  main.cpp  requests.txt  testo.txt  types.h
